add doc for multiple paths
