# src/api/index.js
@@ -6,4 +6,4 @@ import { userRouter } from './resources/user';
 export const restRouter = express.Router();
 restRouter.use('/songs', songRouter);
 restRouter.use('/users', userRouter);
-restRouter.use('/playlists', playListRouter);
+restRouter.use('/playlist', playListRouter);
